--- a/localisation/ideas_l_spanish.yml
+++ b/localisation/ideas_l_spanish.yml
@@ -3035,6 +3035,11 @@
  URG_privatized_industry_desc:0 "Con una industria privatizada, ya no podemos intervenir directamente en la economía con la misma eficacia que antes. Sin embargo, la privatización de nuestra industria nos permite nuevas opciones que la mayoría de las otras naciones no tienen a su disposición."
  URG_rodney_arismendi:0 "Rodney Arismendi"
  URG_serafino_mazzolini:0 "Serafino Mazzolini"
+ URG_safu:0 "Sociedad Anónima Fabril Uruguaya"
+ URG_ute:0 "Usinas y Trasmisiones Eléctricas"
+ URG_ute_desc:0 "La Administración Nacional de Usinas y Trasmisiones Eléctricas,​ más conocida por sus siglas UTE, es la compañía estatal de producción y abastecimiento de energía eléctrica de Uruguay. Fue creada el 21 de octubre de 1912, cuando se promulgó una ley que dio origen a esta empresa pública,​ en el marco del impulso reformista y de modernización de los sucesivos gobiernos batllistas."
+ URG_aserradero_oriental:0 "Aserradero Oriental"
+ URG_ancap_trait:0 "Compañía Estatal" 
  
  
  # Bolivia
