--- a/localisation/lar_decisions_l_english.yml
+++ b/localisation/lar_decisions_l_english.yml
@@ -358,10 +358,7 @@
  BOL_arrest_army_officers:0 "Arrest Army Officers"
  BOL_gain_the_trust_of_the_people:0 "Gain the Trust of the People"
  BOL_challenge_the_militarys_authority:0 "Challenge the Military's Authority"
- BOL_conscript_a_militia_regiment_in_potosi:0 "Conscript a Militia Regiment in Potosi"
- BOL_conscript_a_militia_regiment_in_tarija:0 "Conscript a Militia Regiment in Tarija"
- BOL_conscript_a_militia_regiment_in_chuquisaca:0 "Conscript a Militia Regiment in Chuquisaca"
- BOL_conscript_a_militia_regiment_in_oruro:0 "Conscript a Militia Regiment in Oruro"
+ BOL_conscript_a_militia_regiment_in_FROM:0 "Conscript a Militia Regiment in [FROM.GetName]"
  BOL_regaining_the_trust_of_the_people:0 "Regaining the Trust of the People"
  BOL_regaining_the_trust_of_the_people_desc:0 "Our population has gotten very mad at our army and government as a whole, being felt as if we "abandoned" them, which is absolutely not the case. No matter what nationwide announcement we make, there is simply no way of the people trusting us. So, that's why we will do actions instead of words, so that we can regain the people's trust and make them realize we aren't the bad guys in this scenario."
  BOL_restructure_the_parliament:0 "Restructure the Parliament"
