--- a/localisation/lar_decisions_l_spanish.yml
+++ b/localisation/lar_decisions_l_spanish.yml
@@ -659,10 +659,7 @@
  BOL_arrest_army_officers:0 "Arrestar a los oficiales del ejército"
  BOL_gain_the_trust_of_the_people:0 "Ganar la confianza del pueblo"
  BOL_challenge_the_militarys_authority:0 "Desafía la autoridad de los militares"
- BOL_conscript_a_militia_regiment_in_potosi:0 "Conscribir un regimiento de milicias en Potosí"
- BOL_conscript_a_militia_regiment_in_tarija:0 "Conscripción de un regimiento de milicias en Tarija"
- BOL_conscript_a_militia_regiment_in_chuquisaca:0 "Conscripción de un Regimiento de Milicias en Chuquisaca"
- BOL_conscript_a_militia_regiment_in_oruro:0 "Conscripción de un Regimiento de Milicias en Oruro"
+ BOL_conscript_a_militia_regiment_in_FROM:0 "Conscribir un regimiento de milicias en [FROM.GetName]"
  BOL_regaining_the_trust_of_the_people:0 "Recuperar la confianza del pueblo"
  BOL_regaining_the_trust_of_the_people_desc:0 "Nuestra población se ha enojado mucho con nuestro ejército y gobierno en su conjunto, sintiéndose como si los "abandonáramos", lo cual no es en absoluto así. No importa el anuncio que hagamos a nivel nacional, simplemente no hay forma de que el pueblo confíe en nosotros. Por eso, haremos acciones en lugar de palabras, para poder recuperar la confianza de la gente y hacerles ver que no somos los malos en este escenario."
  BOL_restructure_the_parliament:0 "Reestructurar el Parlamento"
