Added some old gfx and fixed the Peruvian AI

--- a/localisation/lar_decisions_l_english.yml
+++ b/localisation/lar_decisions_l_english.yml
@@ -153,32 +153,32 @@
  PRU_balance_currency_decision:0 "Unlocks a §YDecision§! to §GBalance slightly§! your currency!"
  PRU_balanced_the_currency:0 "Your currency has been balanced"
  PRU_army_navy_rivalry:0 "Army-Navy Rivalry"
- PRU_army_navy_rivalry_desc:0 "Many sectors of our army have fascist ties, while many sectors of our navy have democratic ties. The stronger the Germans get the more fascists appear in the army, and as that happens many of our naval commnders and officers turn even more to democracy and western ideals, which causes not only a split between our army and navy, but also an ideological split between both branches of the armed forces. This massive split is tearing our ntion in half, and becuse of that both continously compete between having the most dominance in the armed forces. If one gets too much power, the other may foment a rebellion. \n\nCurrent Army Power:  [?PRU_army_power|Y0] \n\nCurrent Navy Power:  [?PRU_navy_power|Y0] \n\n§RIf the§! §YArmy Power§! §Rgoes§! §YAbove 40§!§R, the Navy will rise up and a civil war WILL occur.§! \n§RIf the§! §YNavy Power§! §Rgoes§! §YAbove 40§!§R, the Army will rise up and a civil war WILL occur.§! \n\n§RIf both your army and navy coincide ideologically, and neither your army nor navy is rebelling, then this system and national spirit will be removed along with the debuffs.§!"
+ PRU_army_navy_rivalry_desc:0 "Many sectors of our army have fascist ties, while many sectors of our navy have democratic ties. The stronger the Germans get the more fascists appear in the army, and as that happens many of our naval commnders and officers turn even more to democracy and western ideals, which causes not only a split between our army and navy, but also an ideological split between both branches of the armed forces. This massive split is tearing our ntion in half, and becuse of that both continously compete between having the most dominance in the armed forces. If one gets too much power, the other may foment a rebellion. \n\nCurrent Army Power:  £text_infiltrate_army_token [?PRU_army_power|Y0] \n\nCurrent Navy Power:  £text_infiltrate_navy_token [?PRU_navy_power|Y0] \n\n§RIf the§! £text_infiltrate_army_token §YArmy Power§! §Rgoes§! §YAbove 40§!§R, the Navy will rise up and a civil war WILL occur.§! \n§RIf the§! £text_infiltrate_navy_token §YNavy Power§! §Rgoes§! §YAbove 40§!§R, the Army will rise up and a civil war WILL occur.§! \n\n§RIf both your army and navy coincide ideologically, and neither your army nor navy is rebelling, then this system and national spirit will be removed along with the debuffs.§!"
  PRU_give_slightly_more_power_to_the_army:0 "Increase Sliightly the Army's Power"
  PRU_increase_army_power:0 "Increase the Army's Power"
  PRU_increase_greatly_our_militry_power:0 "Increase Greatly the Army's Power"
  PRU_give_slightly_more_power_to_our_navy:0 "Increase Slightly our Naval Power"
  PRU_give_more_power_to_our_navy:0 "Increase our Naval Power"
  PRU_increase_greatly_our_naval_power:0 "Increase Greatly our Naval Power"
- PRU_add_5_navy:0 "Your §YNavy Power§! will §Gincrease§! by §Y5§!"
- PRU_add_10_navy:0 "Your §YNavy Power§! will §Gincrease§! by §Y10§!"
- PRU_add_15_navy:0 "Your §YNavy Power§! will §Gincrease§! by §Y15§!"
- PRU_remove_5_navy:0 "Your §YNavy Power§! will §Rdecrease§! by §Y5§!"
- PRU_remove_10_navy:0 "Your §YNavy Power§! will §Rdecrease§! by §Y10§!"
- PRU_remove_15_navy:0 "Your §YNavy Power§! will §Rdecrease§! by §Y15§!"
- PRU_add_5_army:0 "Your §YArmy Power§! will §Gincrease§! by §Y5§!"
- PRU_add_10_army:0 "Your §YArmy Power§! will §Gincrease§! by §Y10§!"
- PRU_add_15_army:0 "Your §YArmy Power§! will §Gincrease§! by §Y15§!"
- PRU_remove_5_army:0 "Your §YArmy Power§! will §Rdecrease§! by §Y5§!"
- PRU_remove_10_army:0 "Your §YArmy Power§! will §Rdecrease§! by §Y10§!"
- PRU_remove_15_army:0 "Your §YArmy Power§! will §Rdecrease§! by §Y15§!"
+ PRU_add_5_navy:0 "Your £text_infiltrate_navy_token §YNavy Power§! will §Gincrease§! by §Y5§!"
+ PRU_add_10_navy:0 "Your £text_infiltrate_navy_token §YNavy Power§! will §Gincrease§! by §Y10§!"
+ PRU_add_15_navy:0 "Your £text_infiltrate_navy_token §YNavy Power§! will §Gincrease§! by §Y15§!"
+ PRU_remove_5_navy:0 "Your £text_infiltrate_navy_token §YNavy Power§! will §Rdecrease§! by §Y5§!"
+ PRU_remove_10_navy:0 "Your £text_infiltrate_navy_token §YNavy Power§! will §Rdecrease§! by §Y10§!"
+ PRU_remove_15_navy:0 "Your £text_infiltrate_navy_token §YNavy Power§! will §Rdecrease§! by §Y15§!"
+ PRU_add_5_army:0 "Your £text_infiltrate_army_token §YArmy Power§! will §Gincrease§! by §Y5§!"
+ PRU_add_10_army:0 "Your £text_infiltrate_army_token §YArmy Power§! will §Gincrease§! by §Y10§!"
+ PRU_add_15_army:0 "Your £text_infiltrate_army_token §YArmy Power§! will §Gincrease§! by §Y15§!"
+ PRU_remove_5_army:0 "Your £text_infiltrate_army_token §YArmy Power§! will §Rdecrease§! by §Y5§!"
+ PRU_remove_10_army:0 "Your £text_infiltrate_army_token §YArmy Power§! will §Rdecrease§! by §Y10§!"
+ PRU_remove_15_army:0 "Your £text_infiltrate_army_token §YArmy Power§! will §Rdecrease§! by §Y15§!"
  PRU_increasing_power:0 "Is Currently Increasing the Power of a Branch in the Armed Forces"
  PRU_impending_navy_rebellion:0 "Impending Navy Rebellion"
  PRU_impending_navy_rebellion_desc:0 "Sectors of our Navy are planning a coup against our goverment because we hace given the Army too much power. They demand we decrease the power given to the army or else there will be serious consequences."
  PRU_impending_army_rebellion:0 "Impending Army Rebellion"
  PRU_impending_army_rebellion_desc:0 "Sectors of our Army are planning a coup against our goverment because we hace given the Navy too much power. They demand we decrease the power given to the navy or else there will be serious consequences."
- PRU_below_40_army:0 "Decrease §YArmy Power§! below §Y40§!"
- PRU_below_40_navy:0 "Decrease §YNavy Power§! below §Y40§!"
+ PRU_below_40_army:0 "Decrease £text_infiltrate_army_token §YArmy Power§! below §Y40§!"
+ PRU_below_40_navy:0 "Decrease £text_infiltrate_navy_token §YNavy Power§! below §Y40§!"
  PRU_army_navy_rivalry_idea:0 "Army-Navy Rivalry"
  PRU_gain_2_generals:0 "You will §Ggain§! §Y2§! new generals"
  PRU_army_rebellious:0 "\n§RWorking with a democratic state will result in the remining fascists of the Army to rebel against you, and it will take a while to bring them back into your full control. If you have worked with a fascist state with the Army, then you will get a worser version of the Rebelling Army and it will cost more time and resources to get rid of it!§!\n"
