--- a/localisation/lar_decisions_l_spanish.yml
+++ b/localisation/lar_decisions_l_spanish.yml
@@ -444,32 +444,32 @@
  PRU_balance_currency_decision:0 "¡Desbloquea una §YDecisión§! para §GBalancear ligeramente§! su moneda!"
  PRU_balanced_the_currency:0 "Su moneda ha sido equilibrada"
  PRU_army_navy_rivalry:0 "Rivalidad entre el Ejército y la Armada"
- PRU_army_navy_rivalry_desc:0 "Muchos sectores de nuestro ejército tienen vínculos fascistas, mientras que muchos sectores de nuestra marina tienen vínculos democráticos. Cuanto más fuertes se hacen los alemanes, más fascistas aparecen en el ejército, y a medida que esto sucede muchos de nuestros comandantes y oficiales navales se vuelven aún más hacia la democracia y los ideales occidentales, lo que provoca no sólo una división entre nuestro ejército y nuestra marina, sino también una división ideológica entre ambas ramas de las fuerzas armadas. Esta división masiva está partiendo nuestra nación por la mitad, y por ello ambos compiten continuamente por tener el mayor dominio en las fuerzas armadas. Si uno obtiene demasiado poder, el otro puede fomentar una rebelión. \n\nPoder actual del ejército:  [?PRU_army_power|Y0] \n\nPoder de la Armada:  [?PRU_navy_power|Y0] \n\n§RSi el §YPoder del Ejército§! §Rsupera§! §Y40§!§R, la Armada se sublevará y se producirá una guerra civil. \n¡§RSi el§! §YPoder de la Armada§! §Rsupera§! §Y40§!§R, el Ejército se sublevará y se producirá una guerra civil.§! \n\n§RSi tu ejército y tu armada coinciden ideológicamente, y ni la Armada o el Ejercito se esta rebelando, entonces este sistema y el espíritu nacional serán eliminados junto con las debilidades.§!"
+ PRU_army_navy_rivalry_desc:0 "Muchos sectores de nuestro ejército tienen vínculos fascistas, mientras que muchos sectores de nuestra marina tienen vínculos democráticos. Cuanto más fuertes se hacen los alemanes, más fascistas aparecen en el ejército, y a medida que esto sucede muchos de nuestros comandantes y oficiales navales se vuelven aún más hacia la democracia y los ideales occidentales, lo que provoca no sólo una división entre nuestro ejército y nuestra marina, sino también una división ideológica entre ambas ramas de las fuerzas armadas. Esta división masiva está partiendo nuestra nación por la mitad, y por ello ambos compiten continuamente por tener el mayor dominio en las fuerzas armadas. Si uno obtiene demasiado poder, el otro puede fomentar una rebelión. \n\nPoder actual del ejército:  £text_infiltrate_army_token [?PRU_army_power|Y0] \n\nPoder de la Armada:  £text_infiltrate_navy_token [?PRU_navy_power|Y0] \n\n§RSi el £text_infiltrate_army_token §YPoder del Ejército§! §Rsupera§! §Y40§!§R, la Armada se sublevará y se producirá una guerra civil. \n¡§RSi el§! £text_infiltrate_navy_token §YPoder de la Armada§! §Rsupera§! §Y40§!§R, el Ejército se sublevará y se producirá una guerra civil.§! \n\n§RSi tu ejército y tu armada coinciden ideológicamente, y ni la Armada o el Ejercito se esta rebelando, entonces este sistema y el espíritu nacional serán eliminados junto con las debilidades.§!"
  PRU_give_slightly_more_power_to_the_army:0 "Aumentar ligeramente el poder del ejército"
  PRU_increase_army_power:0 "Aumentar el poder del ejército"
  PRU_increase_greatly_our_militry_power:0 "Aumentar mucho el poder del ejército"
  PRU_give_slightly_more_power_to_our_navy:0 "Aumentar Ligeramente nuestro Poder Naval"
  PRU_give_more_power_to_our_navy:0 "Aumentar nuestro Poder Naval"
  PRU_increase_greatly_our_naval_power:0 "Aumentar mucho nuestro Poder naval"
- PRU_add_5_navy:0 "Tu §YPoder de la Armada§! §Gaumentará§! §Y5§!"
- PRU_add_10_navy:0 "Tu §Ypoder de la Armada§! §Gaumentará§! §Y10§!"
- PRU_add_15_navy:0 "Tu §YPoder de la Armada§! §Gaumentará§! §Y15§!"
- PRU_remove_5_navy:0 "Tu §YPoder de la Armada§! se §RReducirá§! §Y5§!"
- PRU_remove_10_navy:0 "Tu §YPoder de la Armada§! se §RReducirá§! §Y10§!"
- PRU_remove_15_navy:0 "Tu §YPoder de la Armada§! se §RReducirá§! §Y15§!"
- PRU_add_5_army:0 "Tu §YPoder del Ejército§! §GAumentará§! §Y5§!"
- PRU_add_10_army:0 "Tu §YPoder de ejército§! §GAumentará§! §Y10§!"
- PRU_add_15_army:0 "Tu §YPoder de ejército§! §GAumentará§! §Y15§!"
- PRU_remove_5_army:0 "Tu §YPoder de ejército§! se §RReducirá§! §Y5§!"
- PRU_remove_10_army:0 "Tu §YPoder de ejército§! se §RReducirá§! §Y10§!"
- PRU_remove_15_army:0 "Tu §YPoder de ejército§! se §RReducirá§! §Y15§!"
+ PRU_add_5_navy:0 "Tu £text_infiltrate_navy_token §YPoder de la Armada§! §Gaumentará§! §Y5§!"
+ PRU_add_10_navy:0 "Tu £text_infiltrate_navy_token §Ypoder de la Armada§! §Gaumentará§! §Y10§!"
+ PRU_add_15_navy:0 "Tu £text_infiltrate_navy_token §YPoder de la Armada§! §Gaumentará§! §Y15§!"
+ PRU_remove_5_navy:0 "Tu £text_infiltrate_navy_token §YPoder de la Armada§! se §RReducirá§! §Y5§!"
+ PRU_remove_10_navy:0 "Tu £text_infiltrate_navy_token §YPoder de la Armada§! se §RReducirá§! §Y10§!"
+ PRU_remove_15_navy:0 "Tu £text_infiltrate_navy_token §YPoder de la Armada§! se §RReducirá§! §Y15§!"
+ PRU_add_5_army:0 "Tu £text_infiltrate_army_token §YPoder del Ejército§! §GAumentará§! §Y5§!"
+ PRU_add_10_army:0 "Tu £text_infiltrate_army_token §YPoder de ejército§! §GAumentará§! §Y10§!"
+ PRU_add_15_army:0 "Tu £text_infiltrate_army_token §YPoder de ejército§! §GAumentará§! §Y15§!"
+ PRU_remove_5_army:0 "Tu £text_infiltrate_army_token §YPoder de ejército§! se §RReducirá§! §Y5§!"
+ PRU_remove_10_army:0 "Tu £text_infiltrate_army_token §YPoder de ejército§! se §RReducirá§! §Y10§!"
+ PRU_remove_15_army:0 "Tu £text_infiltrate_army_token §YPoder de ejército§! se §RReducirá§! §Y15§!"
  PRU_increasing_power:0 "Está aumentando actualmente el poder de una rama de las Fuerzas Armadas"
  PRU_impending_navy_rebellion:0 "Rebelión inminente de la Marina"
  PRU_impending_navy_rebellion_desc:0 "Sectores de nuestra Marina están planeando un golpe de estado contra nuestro gobierno porque le hemos dado demasiado poder al Ejército. Exigen que disminuyamos el poder otorgado al ejército o de lo contrario habrá graves consecuencias."
  PRU_impending_army_rebellion:0 "Rebelión inminente del Ejército"
  PRU_impending_army_rebellion_desc:0 "Sectores de nuestro Ejército están planeando un golpe de estado contra nuestro gobierno porque hemos dado demasiado poder a la Marina. Exigen que disminuyamos el poder otorgado a la marina o de lo contrario habrá graves consecuencias".
- PRU_below_40_army:0 "¡Disminuir el §YPoder§ del Ejército§! por debajo de §Y40§!"
- PRU_below_40_navy:0 "¡Disminuir el §YPoder de la Armada§! por debajo de §Y40§!"
+ PRU_below_40_army:0 "¡Disminuir el £text_infiltrate_army_token §YPoder§ del Ejército§! por debajo de §Y40§!"
+ PRU_below_40_navy:0 "¡Disminuir el £text_infiltrate_navy_token §YPoder de la Armada§! por debajo de §Y40§!"
  PRU_army_navy_rivalry_idea:0 "Rivalidad Ejército-Armada"
  PRU_gain_2_generals:0 "§GGanarás§! §Y2§! nuevos generales"
  PRU_army_rebellious:0 "\n§RTrabajar con un estado democrático hará que los fascistas que quedan en el Ejército se rebelen contra ti, y te llevará un tiempo volver a tenerlos bajo tu control total. Si has trabajado con un estado fascista con el Ejército, entonces obtendrás una versión peor del Ejército rebelde y te costará más tiempo y recursos deshacerte de él.§!"
