--- a/localisation/focus_l_spanish.yml
+++ b/localisation/focus_l_spanish.yml
@@ -3455,8 +3455,8 @@
  URG_consolidate_power_desc:0 "Terra sintió que no había dañado lo suficiente a nuestro país, así que decidió aliarse con sus leales seguidores y destruir la nación por completo. Con todas las cosas que está tratando de hacernos pasar, realmente te hace pensar si apoya o no a este país. No importa, al final vamos a reparar la nación por completo y a diezmar a todos los partidarios de Terra, incluso si eso significa derramar la sangre de los compatriotas."
  URG_march_to_the_capital:0 "Marcha a la capital"
  URG_march_to_the_capital_desc:0 "Es hora de retomar la capital, ¡tenemos que asegurarnos de que Terra no saque lo mejor de nosotros! Tenemos que asegurarnos de derrotarlo en todas partes y de que el país siga en pie. Retomar la capital demostrará no sólo a los uruguayos sino también al mundo que podemos liderar este país, y lo llevaremos a la gloria."
- URG_march_to_paysandu:0 "Marcha a Paysandú"
- URG_march_to_paysandu_desc:0 "Paysandú sigue en firme control de Terra y nos aseguraremos de que eso no dure. Nuestros soldados marcharán hacia el estado y aniquilarán a todos los partidarios de Terra que se atrevan a bloquear su camino!"
+ URG_march_to_paysandu:0 "Marcha al Norte"
+ URG_march_to_paysandu_desc:0 "El norte Uruguayo sigue en firme control de Terra y nos aseguraremos de que eso no dure. Nuestros soldados marcharán en dirección norte y aniquilarán a todos los partidarios de Terra que se atrevan a bloquear su camino!"
  URG_focus_on_external_matters:0 "Mira hacia afuera"
  URG_focus_on_external_matters_desc:0 "Ahora que hemos estabilizado nuestra nación es hora de que nos ocupemos de las protestas de una vez por todas, y empecemos a mirar fuera de nuestras fronteras. Nuestros dos vecinos son las 2 potencias más fuertes de Sudamérica, así que cualquier expansión fuera de nuestras fronteras será difícil, pero lo que tenemos es un truco bajo la manga que puede funcionar."
  URG_roosevelts_visit_to_uruguay:0 "Visita de Roosevelt a Uruguay"
