--- a/localisation/victory_points_l_spanish.yml
+++ b/localisation/victory_points_l_spanish.yml
@@ -1003,16 +1003,9 @@
  VICTORY_POINTS_5173:0 "Rio Gallegos"
  VICTORY_POINTS_2199:0 "San Carlos de Bariloche"
  VICTORY_POINTS_10992:0 "Mendoza"
- VICTORY_POINTS_13244:0 "Punta del Este"
  VICTORY_POINTS_8217:0 "Iquique"
  VICTORY_POINTS_5131:0 "Arica"
- VICTORY_POINTS_13275:0 "Tacuarembo"
- VICTORY_POINTS_13278:0 "Rivera"
- VICTORY_POINTS_4457:0 "Colonia del Sacramento"
- VICTORY_POINTS_1641:0 "Melo"
- VICTORY_POINTS_13252:0 "Florida"
  VICTORY_POINTS_13703:0 "Viedma"
- VICTORY_POINTS_10502:0 "Paysandú"
  VICTORY_POINTS_12960:0 "Port Stanley"
  VICTORY_POINTS_10405:0 "Florianópolis"
  VICTORY_POINTS_5215:0 "Punta Arenas"
@@ -1061,6 +1054,16 @@
  VICTORY_POINTS_13908:0 "Puerto Suárez" #13908 - 487
  VICTORY_POINTS_14043:0 "Santa Ana" #14043 - 844
  VICTORY_POINTS_5229:0 "Tarija" #826
+ 
+ #NUEVOS VP - URUGUAY
+ VICTORY_POINTS_13281:0 "Artigas"
+ VICTORY_POINTS_13278:0 "Rivera"
+ VICTORY_POINTS_13243:0 "Fray Bentos"
+ VICTORY_POINTS_13236:0 "Maldonado" 
+ VICTORY_POINTS_13277:0 "Salto" 
+ VICTORY_POINTS_4457:0 "Colonia del Sacramento"
+ VICTORY_POINTS_13271:0 "Melo"
+ VICTORY_POINTS_13253:0 "Florida" 
 
  #NUEVOS VP - CHILE
  VICTORY_POINTS_5121:0 "Temuco"
