--- a/localisation/state_names_l_spanish.yml
+++ b/localisation/state_names_l_spanish.yml
@@ -298,7 +298,7 @@
  STATE_297:0 "Guinea Ecuatorial"
  STATE_298:0 "Liberia"
  STATE_299:0 "Islas Malvinas"
- STATE_300:0 "Uruguay"
+ STATE_300:0 "Sur Uruguay"
  STATE_301:0 "Paraguay"
  STATE_302:0 "La Paz"
  STATE_303:0 "Lima"
@@ -825,7 +825,7 @@
  STATE_824:0 "Misiones"
  STATE_825:0 "Santa Catarina Oeste"
  STATE_826:0 "Tarija"
- STATE_827:0 "Paysandu"
+ STATE_827:0 "Norte Uruguayo"
  STATE_828:0 "Tarapacá"
  STATE_829:0 "Arica"
  STATE_830:0 "Los Lagos"
@@ -845,7 +845,7 @@
  STATE_844:0 "Beni"
  STATE_845:0 "Acre"
  STATE_846:0 "Orellana"
- STATE_847:0 "Montevideo"
+ STATE_847:0 "Zona Metropolitana de Montevideo"
  STATE_848:0 "Guajira"
  STATE_849:0 "Antioquia"
  STATE_850:0 "Nariño"
